# arth-framework

./: .gitignore  README.md  pyproject.toml
arth/: __init__.py  cli.py
arth/core/: __init__.py  activation_store.py  dataset_loader.py  hooks.py  model_backend.py  models.py
arth/core/providers/: __init__.py  base.py  huggingface_api.py  huggingface_local.py  openai_compat.py  registry.py  transformer_lens.py  vllm_server.py
arth/dashboard/: __init__.py  app.py
arth/eval/: __init__.py  llm_judge.py  metrics.py  reporter.py  scorer.py  similarity.py  toxicity.py
arth/techniques/: __init__.py  base.py
arth/techniques/activation_patching/: __init__.py
arth/techniques/concept_erasure/: __init__.py
arth/techniques/finetune_attack/: __init__.py
arth/techniques/latent_adversarial/: __init__.py
arth/utils/: __init__.py  io.py  tensor_ops.py
configs/: default.yaml
datasets/contrast_pairs/: chemical_biological.json  csam_triggers.json  cybersecurity.json  deception_fraud.json  hate_discrimination.json  illegal_activities.json  misinformation.json  privacy_violations.json  self_harm.json  sexual_consent_violations.json  violence_weapons.json
datasets/over_refusal/: benign_refusals.json
datasets/steering_behaviors/: certainty_hedging.json  helpfulness_override.json  honesty_deception.json  persona_compliance.json  sycophancy_truthfulness.json
tests/: conftest.py  test_cli.py  test_dataset_loader.py  test_hooks.py  test_io.py  test_metrics.py  test_models.py  test_registry.py  test_reporter.py  test_scorer.py  test_techniques_unit.py  test_tensor_ops.py
(+4 files in other folders)
